--- a/popup.html
+++ b/popup.html
@@ -152,20 +152,9 @@
                         <path stroke-linecap="round" stroke-linejoin="round"
                             d="M21 21l-4.35-4.35A7.5 7.5 0 1011 18.5a7.5 7.5 0 005.65-2.85z" />
                     </svg>
-                    1分钟查询一次
+                    30秒查询一次
                 </span>
-                <button class="button" id="sampleMinute" data-seconds="1">执行</button>
-            </div>
-
-            <div class="feature">
-                <span>
-                    <svg fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round"
-                            d="M21 21l-4.35-4.35A7.5 7.5 0 1011 18.5a7.5 7.5 0 005.65-2.85z" />
-                    </svg>
-                    2分钟查询一次
-                </span>
-                <button class="button" id="min15" data-seconds="2">执行</button>
+                <button class="button" id="sampleMinute">执行</button>
             </div>
         </div>
 
